--- a/Coderwall/packages.config
+++ b/Coderwall/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AgFx" version="1.1.0.1101" />
   <package id="Newtonsoft.Json" version="4.0.5" />
   <package id="RestSharp" version="102.6" />
 </packages>
