--- a/Coderwall/Coderwall.csproj
+++ b/Coderwall/Coderwall.csproj
@@ -73,6 +73,7 @@
     </Compile>
     <Compile Include="Models\BadgeObject.cs" />
     <Compile Include="Models\AppSettings.cs" />
+    <Compile Include="Models\ImageCache.cs" />
     <Compile Include="Models\Statistic.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserCache.cs" />
