--- a/Coderwall/Coderwall.csproj
+++ b/Coderwall/Coderwall.csproj
@@ -113,6 +113,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\appbar.back.rest.png" />
+    <Content Include="Icons\appbar.people.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icons\appbar.profile.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -136,6 +139,9 @@
     </Content>
     <Resource Include="PanoramaBackground.png" />
     <Content Include="Icons\appbar.sync.rest.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Icons\appbar.user.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\bg.png">
