--- a/Coderwall/Coderwall.csproj
+++ b/Coderwall/Coderwall.csproj
@@ -107,6 +107,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Coderwall_2012_03_28_23_31_40.sap" />
+    <None Include="Coderwall_2012_03_28_23_34_40.sap" />
     <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
